# blank-chat

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  backlog.md  bc-env.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ActionsPipeline.yml  ci.yml
.zed/: settings.json  tasks.json
apps/: CMakeLists.txt
apps/client/: bc_client_config.toml.in  main.cpp
apps/server/: bc_server_config.toml.in  main.cpp
client/src/: main.cpp
cmake/: CompilerWarnings.cmake  ConfigHelpers.cmake  Coverage.cmake  Dependencies.cmake  Sanitizers.cmake  StaticAnalysis.cmake  YoctoHelpers.cmake
core/include/: placeholder.h
core/src/: placeholder.cpp
libs/: CMakeLists.txt
libs/cli/: CMakeLists.txt
libs/cli/include/cli/: repl.h
libs/cli/src/: repl.cpp
libs/core/: CMakeLists.txt
libs/core/include/core/: log_level.h  logger.h  secure_buffer.h  secure_string.h  string_hash.h  string_utils.h  terminal.h
libs/core/logger/: CMakeLists.txt
libs/core/logger/include/: log_level.h  logger.h
libs/core/logger/src/: logger.cpp
libs/core/src/: boost_exception_handler.cpp  logger.cpp  secure_buffer.cpp  secure_string.cpp  string_utils.cpp  terminal.cpp
libs/crypto/: CMakeLists.txt
libs/crypto/include/crypto/: bip39.h  bip39_dictionary.h  identity_key.h  mailbox_derivation.h
libs/crypto/primitives/: CMakeLists.txt
libs/crypto/primitives/include/: primitives.hpp
libs/crypto/primitives/src/: primitives.cpp
libs/crypto/src/: bip39.cpp  identity_key.cpp  mailbox_derivation.cpp
libs/domain/client/: CMakeLists.txt
libs/domain/client/include/client/: address_book.h  config.h  contact.h  contact_storage.h  conversation_cache.h  public_key.h  raw_contact.h
libs/domain/client/src/: address_book.cpp  config.cpp  contact_storage.cpp  conversation_cache.cpp
libs/domain/include/: mailbox_registry.h
libs/domain/server/: CMakeLists.txt
libs/domain/server/include/: message_broker.h
libs/domain/server/include/server/: config.h  message_broker.h
libs/domain/server/src/: config.cpp  message_broker.cpp
libs/network/: CMakeLists.txt
libs/network/include/network/: tcp_client.h  tcp_server.h  tcp_session.h  tor_control.h
libs/network/src/: tcp_client.cpp  tcp_server.cpp  tcp_session.cpp  tor_control.cpp
libs/protocol/: CMakeLists.txt
libs/protocol/frame/: CMakeLists.txt
libs/protocol/frame/include/: action_type.h  frame.h  mailbox_id.h  mailbox_id_hash.h
libs/protocol/frame/src/: frame.cpp  mailbox_id.cpp
libs/protocol/include/protocol/: action_type.h  frame.h  frame_parser.h  frame_parser_state.h  i_frame_handler.h  mailbox_id.h  mailbox_id_hash.h
libs/protocol/src/: frame.cpp  frame_parser.cpp  mailbox_id.cpp
meta-blankchat/conf/: layer.conf
meta-blankchat/conf/distro/: blankchat.conf
meta-blankchat/recipes-apps/blank-chat/: blank-chat_0.1.bb
meta-blankchat/recipes-core/images/: blankchat-image-client.bb  blankchat-image-minimal.bb  blankchat-image-server.bb
meta-blankchat/recipes-devtools/pseudo/: pseudo_%.bbappend
meta-blankchat/recipes-kernel/dtc/: dtc_%.bbappend
meta-blankchat/recipes-support/simdjson/: simdjson_4.6.0.bb
meta-blankchat/recipes-support/tomlplusplus/: tomlplusplus_3.4.0.bb
meta-blankchat/recipes-support/tor/: blankchat-tor-config-client.bb  blankchat-tor-config-server.bb
meta-blankchat/recipes-support/tor/files/: torrc-server
modules/: CMakeLists.txt
modules/crypto/: CMakeLists.txt
modules/crypto/include/crypto/: placeholder.h
modules/crypto/src/: placeholder.cpp
modules/network/: CMakeLists.txt
modules/network/include/network/: placeholder.h
modules/network/src/: placeholder.cpp
modules/protocol/: CMakeLists.txt
modules/protocol/include/protocol/: mailbox_id.h  placeholder.h
modules/protocol/src/: mailbox_id.cpp  placeholder.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/utils/: log_modules.h  logger.h  uuid_constants.h  uuid_factory.h
modules/utils/src/: logger.cpp  uuid_factory.cpp
scripts/: Dockerfile.yocto  build.py  build.sh  build_yocto.py  clean.py  clean.sh  coverage.py  coverage.sh  download_sdk.py  format.py  format.sh  run.py  run.sh  scripts_usage.md  test.py  test.sh  upload_sdk.py  utils.py  valgrind.py
server/src/: main.cpp
tests/: CMakeLists.txt  gtest_main.cpp  logger_test.cpp  mailbox_id_test.cpp  placeholder.cpp  uuid_factory_test.cpp
tests/libs/cli/: repl_test.cpp
tests/libs/core/: boost_exception_handler_test.cpp  logger_test.cpp  secure_buffer_test.cpp  secure_string_test.cpp  string_utils_test.cpp
tests/libs/core/logger/: logger_test.cpp
tests/libs/crypto/: bip39_test.cpp  identity_key_test.cpp  mailbox_derivation_test.cpp
tests/libs/domain/client/: address_book_test.cpp  config_test.cpp  contact_storage_test.cpp  conversation_cache_test.cpp
tests/libs/domain/server/: config_test.cpp  message_broker_test.cpp
tests/libs/network/: tcp_client_test.cpp  tcp_server_test.cpp  tcp_session_test.cpp
tests/libs/protocol/: frame_parser_test.cpp  frame_test.cpp  mailbox_id_test.cpp
tests/libs/protocol/frame/: frame_test.cpp  mailbox_id_test.cpp
